# sklears

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  PROJECT_STRUCTURE.md  README.md  SCIRS2_INTEGRATION_POLICY.md  TODO.md  blas_build_solution.md  build.rs
crates/sklears-calibration/: Cargo.toml  README.md  TODO.md
crates/sklears-calibration/benches/: calibration_benchmarks.rs
crates/sklears-calibration/examples/: README.md  basic_calibration.rs  bayesian_uncertainty.rs  calibration_quickstart.rs  multiclass_calibration.rs  performance_comparison.rs  streaming_calibration.rs
crates/sklears-calibration/proptest-regressions/: property_tests.txt
crates/sklears-calibration/src/: advanced.rs  advanced_mathematical.rs  bayesian.rs  bbq.rs  beta.rs  binary.rs  calibration_aware_training.rs  category_theoretic.rs  conformal.rs  continual_learning.rs  core.rs  differential_privacy.rs  domain_specific.rs  fairness_aware.rs  fluent_api.rs  gaussian_process.rs  gpu_calibration.rs  high_precision.rs  higher_order_uncertainty.rs  histogram.rs  information_geometry.rs  isotonic.rs  kde.rs  large_scale.rs  lib.rs  llm_calibration.rs  local.rs  measure_theoretic.rs  meta_learning.rs  metrics.rs  modular_framework.rs  multi_modal.rs  multiclass.rs  neural_calibration.rs  numerical_stability.rs  optimization.rs  performance.rs  plugin_architecture.rs  prediction_intervals.rs  profile_guided_optimization.rs  (+16 more)
crates/sklears-calibration/tests/: integration_tests.rs
crates/sklears-clustering/: Cargo.toml  README.md  TODO.md
crates/sklears-clustering/benches/: comprehensive_benchmarks.rs  run_comparison.sh  sklearn_comparison.py
crates/sklears-clustering/examples/: dbscan_comprehensive.rs  hierarchical_gmm_comprehensive.rs  kmeans_comprehensive.rs
crates/sklears-clustering/src/: birch.rs  cure.rs  dbscan.rs  density_peaks.rs  dirichlet_process.rs  distributed.rs  ensemble.rs  evolutionary.rs  feature_selection.rs  fuzzy_cmeans.rs  gpu_distances.rs  graph_clustering.rs  hdbscan.rs  hierarchical.rs  incremental_dbscan.rs  kde_clustering.rs  kmeans.rs  lib.rs  locality_sensitive_hashing.rs  lof.rs  mean_shift.rs  memory_mapped.rs  multi_view.rs  optics.rs  out_of_core.rs  parallel.rs  parallel_hierarchical.rs  performance.rs  rock.rs  semi_supervised.rs  simd_distances.rs  sparse_matrix.rs  spectral.rs  streaming.rs  text_clustering.rs  time_series.rs
crates/sklears-clustering/tests/: basic_functionality.rs  convergence_tests.rs  property_tests.proptest-regressions  property_tests.rs  robustness_tests.rs  scalability_tests.rs  simple_property_tests.proptest-regressions  simple_property_tests.rs
crates/sklears-compose/: ARCHITECTURE.md  Cargo.toml  README.md  TODO.md
crates/sklears-compose/benches/: composition_benchmarks.rs  ensemble_benchmarks.rs  feature_transformation_benchmarks.rs  simd_benchmarks.rs
crates/sklears-compose/examples/: advanced_features_showcase.rs  comprehensive_developer_showcase.rs  comprehensive_ml_workflow.rs  dag_pipelines_enhanced.rs  developer_experience_demo.rs  domain_specific_pipelines.rs  ensemble_methods.rs  feature_union_demo.rs  interactive_developer_experience.rs  performance_benchmarks.rs  pipeline_quickstart.rs
crates/sklears-compose/examples.disabled/: automl_integration.rs  basic_pipeline_composition.rs  comprehensive_ml_pipeline.rs  comprehensive_ml_workflow.rs  dag_pipelines.rs.disabled  enhanced_error_handling.rs  enhanced_error_handling_demo.rs  ensemble_methods.rs  performance_benchmarks.rs  performance_profiling.rs  time_series_pipeline.rs
crates/sklears-compose/src/: advanced_debugging.rs  advanced_pipeline.rs  alerting_system.rs  api_consistency.rs  api_gateway.rs  automated_alerting.rs  automl.rs  benchmarking.rs  boosting.rs  bulkhead_isolation.rs  column_transformer.rs  compliance_audit.rs  compliance_breach.rs  compliance_consent.rs  compliance_core.rs  compliance_governance.rs  compliance_metrics.rs  compliance_policy.rs  compliance_regulatory.rs  compliance_retention.rs  component_health.rs  config_management.rs  configuration_context.rs  configuration_management.rs  configuration_validation.rs  container_execution.rs  context_compliance.rs  context_core.rs  context_diagnostic.rs  (+119 more)
crates/sklears-core/: Cargo.toml  README.md  TODO.md
crates/sklears-covariance/: Cargo.toml  README.md  TODO.md
crates/sklears-cross-decomposition/: Cargo.toml  README.md  TODO.md  libcommon.rlib
crates/sklears-datasets/: Cargo.toml  Cargo.toml.original  MIGRATION_STATUS.md  README.md  TODO.md
crates/sklears-decomposition/: Cargo.toml  README.md  TODO.md
crates/sklears-discriminant-analysis/: Cargo.toml  README.md  TODO.md
crates/sklears-dummy/: Cargo.toml  README.md  TODO.md
crates/sklears-ensemble/: Cargo.toml  README.md  TODO.md
crates/sklears-feature-extraction/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  TODO.md
crates/sklears-feature-selection/: Cargo.toml  README.md  TODO.md  libdomain_specific_tests.rlib
crates/sklears-gaussian-process/: Cargo.toml  README.md  TODO.md
crates/sklears-impute/: Cargo.toml  README.md  TODO.md  libmemory_profiler.rlib
crates/sklears-inspection/: Cargo.toml  README.md  TODO.md
crates/sklears-isotonic/: Cargo.toml  README.md  TODO.md
crates/sklears-kernel-approximation/: Cargo.toml  README.md  TODO.md
crates/sklears-linear/: Cargo.toml  README.md  TODO.md
crates/sklears-manifold/: Cargo.toml  README.md  TODO.md
crates/sklears-metrics/: Cargo.toml  README.md  TODO.md
crates/sklears-mixture/: Cargo.toml  README.md  TODO.md
crates/sklears-model-selection/: Cargo.toml  README.md  TODO.md  test_modules
crates/sklears-multiclass/: Cargo.toml  README.md  TODO.md
crates/sklears-multioutput/: Cargo.toml  README.md  TODO.md
crates/sklears-naive-bayes/: Cargo.toml  README.md  TODO.md
crates/sklears-neighbors/: Cargo.toml  README.md  TODO.md
crates/sklears-neural/: Cargo.toml  README.md  TODO.md
crates/sklears-preprocessing/: Cargo.toml  ENHANCEMENTS_SUMMARY.md  README.md  TESTING_ENHANCEMENTS.md  TODO.md
(+3295 files in other folders)
