[package]
name = "sklears-calibration"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["machine-learning", "calibration", "probability"]
categories = ["science", "mathematics"]
description = "Probability calibration for classifiers"

[dependencies]
sklears-core = { workspace = true }
# SciRS2 Policy Compliant Dependencies
scirs2-core = { workspace = true }
scirs2-stats = { workspace = true }  # For statistical calibration methods
scirs2-optimize = { workspace = true }  # For optimization-based calibration

# ❌ REMOVED: Legacy dependencies (SciRS2 Policy violations)
# ❌ scirs2-autograd - transitional dependency removed (SciRS2 Policy)
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
oxicode = { workspace = true, optional = true }  # Modern replacement for bincode (workspace policy)
chrono = { workspace = true, features = ["serde"], optional = true }
rayon = { workspace = true }
num_cpus = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }

[features]
default = []
serde = [
    "dep:serde",
    "dep:serde_json",
    "dep:oxicode",
    "dep:chrono",
    "sklears-core/serde"
]

[[bench]]
name = "calibration_benchmarks"
harness = false
